--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 </div>
                 <div class="peleador">
                     <img src="" alt="">
-                    <button>Peleador 2</button>
+                    <button class="btnj1" onclick="peleador2(event)">Peleador 2</button>
                 </div>
                 <div class="peleador">
                     <img src="" alt="">
-                    <button>Peleador 3</button>
+                    <button class="btnj1" onclick="peleador3(event)">Peleador 3</button>
                 </div>
                 <div class="peleador">
                     <img src="" alt="">
-                    <button>Peleador 4</button>
+                    <button class="btnj1" onclick="peleador4(event)">Peleador 4</button>
                 </div>
             </div>
 
@@ -59,15 +59,15 @@
                 </div>
                 <div class="peleador">
                     <img src="" alt="">
-                    <button>Peleador 2</button>
+                    <button class="btnj2" onclick="peleador2(event)">Peleador 2</button>
                 </div>
                 <div class="peleador">
                     <img src="" alt="">
-                    <button>Peleador 3</button>
+                    <button class="btnj2" onclick="peleador3(event)">Peleador 3</button>
                 </div>
                 <div class="peleador">
                     <img src="" alt="">
-                    <button>Peleador 4</button>
+                    <button class="btnj2" onclick="peleador4(event)">Peleador 4</button>
                 </div>
             </div>
         </div>
