Crea funcion jugar final

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p class="respJugador2"></p>
                 </div>
                 <div class="winner">
-                    <p></p>
+                    <p class="winner"></p>
                 </div>
             </div>
         </div>
