Crea la interfaz grafica

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,19 +14,19 @@
             </div>
             <div class="peleadores">
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj1" onclick="peleador1(event)">Peleador 1</button>
                 </div>
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj1" onclick="peleador2(event)">Peleador 2</button>
                 </div>
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj1" onclick="peleador3(event)">Peleador 3</button>
                 </div>
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj1" onclick="peleador4(event)">Peleador 4</button>
                 </div>
             </div>
@@ -54,19 +55,19 @@
             </div>
             <div class="peleadores">
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj2" onclick="peleador1(event)">Peleador 1</button>
                 </div>
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj2" onclick="peleador2(event)">Peleador 2</button>
                 </div>
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj2" onclick="peleador3(event)">Peleador 3</button>
                 </div>
                 <div class="peleador">
-                    <img src="" alt="">
+                    <img src="img/descarga.jpg" alt="">
                     <button class="btnj2" onclick="peleador4(event)">Peleador 4</button>
                 </div>
             </div>
